# vtUudSeiNalCmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  codesign.rb  main.cpp  run.sh  test.264.base  test.264.misc  transcode.h  transcode.m
h264bitstream/: .gitignore  CMakeLists.txt  h264_analyze.c  h264_avcc.c  h264_nal.c  h264_sei.c  h264_sei.h  h264_sei.in.c
